--- a/src/style/usage/module/common.scss
+++ b/src/style/usage/module/common.scss
@@ -3,12 +3,15 @@ $base-color: #00b38a;
 @font-face {
   font-family: 'yofont';
   src:url('/images/iconfont/iconfont.woff') format('woff'), 
-      url('/images/iconfont/iconfont.ttf') format('truetype');
-      
+      url('/images/iconfont/iconfont.ttf') format('truetype');     
 }
 @font-face {
   font-family: 'yofont';
   src:url('/images/iconfont/iconfont1.woff') format('woff'), 
-      url('/images/iconfont/iconfont1.ttf') format('truetype');
-      
+      url('/images/iconfont/iconfont1.ttf') format('truetype');    
+}
+@font-face {
+  font-family: 'yofont';
+  src:url('/images/iconfont/iconfont2.woff') format('woff'), 
+      url('/images/iconfont/iconfont2.ttf') format('truetype');    
 }
