--- a/src/style/usage/module/footer.scss
+++ b/src/style/usage/module/footer.scss
@@ -8,6 +8,9 @@
           @include flexbox();
           align-items: center;
           justify-content: space-around;
+          .yo-ico{
+              font-size: .2rem;
+          }
       }
     }
   
