--- a/src/style/usage/module/index.scss
+++ b/src/style/usage/module/index.scss
@@ -13,7 +13,7 @@
 	    .lunbo{
 	    	width:100%;
 	    	height: 540px;
-	    	background: red;
+	    	background: green;
 	    }
 	    .new-product{
 	        background: #F0F0F0;
