--- a/src/style/usage/module/index.scss
+++ b/src/style/usage/module/index.scss
@@ -33,21 +33,33 @@
 				h4{
 					font-size: .13rem;
 					color:#1d1d1d;
+					margin-bottom: .3rem;
 				}
-				a{
-					color:#000;
-					font-size: .18rem;
-					@include border(2px ,#000000);
-					text-align: center;
-					width: 1rem;
-					height: .3rem;
-					line-height: .3rem;
-					display:flex;
-					margin: 0 auto;
+				.swiper-pagination{
+					bottom:1.85rem;
 				}
 				.scroll-btn{
 					width: 100%;
 					height:.8rem;
+					margin-top: .3rem;
+					text-align: center;
+					a{
+
+						color:#000;
+						font-size: .18rem;
+						@include border(2px ,#000000);
+						justify-content: center;
+						width: 1rem;
+						height: .3rem;
+						line-height: .3rem;
+						display:inline-flex;
+						margin: 0 auto;
+
+					}
+					/*a:nth-child(2){
+						margin-left: .2rem;
+					}*/
+
 				}
 			}
 	    }
@@ -72,9 +84,10 @@
 		            width: .75rem;
 				    height: .3rem;
 				    font-size: .13rem;
-				    line-height: .26rem;
+				    line-height: .3rem;
 				    color: #1D1D1D;
-				    @include border(2px #000);
+				    font-weight: bold;
+				    @include border(2px ,#000);
 				    background: #fff;
 				    text-align: center;
    				}
@@ -106,5 +119,32 @@
 	    		}
 	    	}
 	    }
+    }
+    #myTemplate{
+    	.drop-list{
+			display: none;
+    	}
+    	li{
+    		@include border(0 0 2px 0, #f2f2f2);
+    		.lv1{
+    			background: #fff;
+    			padding:0  .4rem 0 .24rem;
+    			color: #000;
+    		}
+    	}
+	
+		li{
+			a{
+				color: #000;
+    			padding:0  .4rem 0 .4rem;
+    			line-height: .66rem;
+    			font-size: .16rem;
+    			display: flex;
+    			justify-content: space-between;
+    			background: #f2f2f2;
+			}
+    	}
+    	
+    	
     }
 }
