--- a/src/style/usage/module/common.scss
+++ b/src/style/usage/module/common.scss
@@ -15,3 +15,8 @@ $base-color: #00b38a;
   src:url('/images/iconfont/iconfont2.woff') format('woff'), 
       url('/images/iconfont/iconfont2.ttf') format('truetype');    
 }
+@font-face {
+  font-family: 'yofont';
+  src:url('/images/iconfont/iconfont4.woff') format('woff'), 
+      url('/images/iconfont/iconfont4.ttf') format('truetype');    
+}
