--- a/src/style/usage/module/footer1.scss
+++ b/src/style/usage/module/footer1.scss
@@ -1,7 +1,7 @@
 
 #footer1{
     div{
-      height: 1.3rem;
+      height: 1.4rem;
       padding: .5rem 0 0;
       @include border(1px 0 0 0,#dcdcdc);
       header{
@@ -13,7 +13,7 @@
           margin-bottom: .3rem;
       }
       footer{
-          margin-top: .15rem;
+          margin: .15rem 0 .1rem;
           overflow: hidden;
           input{
               height:.4rem ;
