--- a/src/style/usage/module/header.scss
+++ b/src/style/usage/module/header.scss
@@ -15,6 +15,7 @@
           line-height: .6rem;
           font-size: .26rem;
           a{
+            color:#000;
               img{
                   height:.6rem;
                   width:.6rem;
